Add definition for js and operators.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
 <body>
 
   <div class="container">
+
     <div class="jumbotron">
       <h1>JS & jQuery Flashcards</h1>
       <p>Click on a card to see the definition</p>
     </div>
+
+    <h3>JavaScript(JS)</h3>
+    <p>An object-oriented programming language often used to make web sites interactive.</p>
+    <h3>Operators</h3>
+    <p>Characters such as (+) or (!==) that carry out operations such as math on data, or assigning a value to variables. They can also compare values/data to each other.</p>
+    <h3>Variables</h3>
+    <h3>Function</h3>
+    <h3>Methods</h3>
+    <h3>Arguments</h3>
+    <h3>Parameters</h3>
+    <h3>Return</h3>
+    <h3>Strings</h3>
+    <h3>Booleans</h3>
+    <h3>jQuery</h3>
+    <h3>Attributes</h3>
 
 
   </div>
