Add definition for variables and links to the first 3 definitions.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <h3>Operators</h3>
     <p>Characters such as (+) or (!==) that carry out operations such as math on data, or assigning a value to variables. They can also compare values/data to each other.</p>
     <h3>Variables</h3>
+    <p>A name given to a value, known or unknown.</p>
+    <a href="https://en.wikipedia.org/wiki/Variable_(computer_science)">More info</a>
     <h3>Function</h3>
     <h3>Methods</h3>
     <h3>Arguments</h3>
