Add definition and link for ruther reading on functions.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,22 @@
 
     <h3>JavaScript(JS)</h3>
     <p>An object-oriented programming language often used to make web sites interactive.</p>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">More info</a>
+
     <h3>Operators</h3>
-    <p>Characters such as (+) or (!==) that carry out operations such as math on data, or assigning a value to variables. They can also compare values/data to each other.</p>
+    <p>Characters such as (+) or (!==) that carry out operations such as math on data, or assigning a value to variables. They can also compare values/data to each other.</p>    
+    <a href="https://developer.mozilla.org/en-US/docs/Glossary/Operator">More info</a>
+
     <h3>Variables</h3>
     <p>A name given to a value, known or unknown.</p>
     <a href="https://en.wikipedia.org/wiki/Variable_(computer_science)">More info</a>
+
+    <a href="">More info</a>
+
     <h3>Function</h3>
+    <p>A <strong>named</strong> set of steps/processes that produces a result/output from performing said proecesses on an inputted value (or values).</p>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Functions">More info</a>
+
     <h3>Methods</h3>
     <h3>Arguments</h3>
     <h3>Parameters</h3>
