--- a/index.html
+++ b/index.html
@@ -29,22 +29,28 @@
       <div class="col-md-3">
         <div class="card">
           <h3>Operators</h3>
-          <p>Characters such as (+) or (!==) that carry out operations such as math on data, or assigning a value to variables. They can also compare values/data to each other.</p>    
-          <a href="https://developer.mozilla.org/en-US/docs/Glossary/Operator">More info</a>
+          <div class="definition">
+            <p>Characters such as (+) or (!==) that carry out operations such as math on data, or assigning a value to variables. They can also compare values/data to each other.</p>    
+            <a href="https://developer.mozilla.org/en-US/docs/Glossary/Operator">More info</a>
+          </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
           <h3>Variables</h3>
-          <p>A name given to a value, known or unknown.</p>
-          <a href="https://en.wikipedia.org/wiki/Variable_(computer_science)">More info</a>
+          <div class="definition">
+            <p>A name given to a value, known or unknown.</p>
+            <a href="https://en.wikipedia.org/wiki/Variable_(computer_science)">More info</a>
+          </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
           <h3>Function</h3>
-          <p>A <strong>named</strong> set of steps/processes that produces a result/output from performing said processes on an inputted value (or values).</p>
-          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Functions">More info</a>
+          <div class="definition">
+            <p>A <strong>named</strong> set of steps/processes that produces a result/output from performing said processes on an inputted value (or values).</p>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Functions">More info</a>
+          </div>
         </div>
       </div>
     </div>
@@ -53,29 +59,37 @@
       <div class="col-md-3">
         <div class="card">
           <h3>Methods</h3>
-          <p>A type of JS function that is called on something, such as on a string.</p>
-          <a href="https://www.learnhowtoprogram.com/introduction-to-programming-part-time-react-track/javascript-and-jquery/methods">More info</a>
+          <div class="definition">
+            <p>A type of JS function that is called on something, such as on a string.</p>
+            <a href="https://www.learnhowtoprogram.com/introduction-to-programming-part-time-react-track/javascript-and-jquery/methods">More info</a>
+          </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
           <h3>Arguments</h3>
-          <p>The actual value or values you input/give to a function - the data you want the function/method to perform its steps on. Not to be confused with <a href="https://developer.mozilla.org/en-US/docs/Glossary/Parameter">parameters</a>.</p>
-          <a href="https://developer.mozilla.org/en-US/docs/Glossary/Argument">More info</a>
+          <div class="definition">
+            <p>The actual value or values you input/give to a function - the data you want the function/method to perform its steps on. Not to be confused with <a href="https://developer.mozilla.org/en-US/docs/Glossary/Parameter">parameters</a>.</p>
+            <a href="https://developer.mozilla.org/en-US/docs/Glossary/Argument">More info</a>
+          </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
           <h3>Parameters</h3>
-          <p>A named variable that is assigned to an argument that gets passed into a function. Sort of like a temporary/placeholder for the actual value that gets inputted into a function. Related to, but not the same as an <a href="https://developer.mozilla.org/en-US/docs/Glossary/Argument">argument</a>.</p>
-          <a href="https://developer.mozilla.org/en-US/docs/Glossary/Parameter">More info</a>
+          <div class="definition">
+            <p>A named variable that is assigned to an argument that gets passed into a function. Sort of like a temporary/placeholder for the actual value that gets inputted into a function. Related to, but not the same as an <a href="https://developer.mozilla.org/en-US/docs/Glossary/Argument">argument</a>.</p>
+            <a href="https://developer.mozilla.org/en-US/docs/Glossary/Parameter">More info</a>
+          </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
           <h3>jQuery</h3>
-          <p>A file/library with pre-written functions for common tasks that you can use in your js files. This allows you to do some things fast, with pre-build functions like alert() without having to write all the code to make them happen.</p>
-          <a href="https://www.w3schools.com/jquery/jquery_intro.asp">More info</a>
+          <div class="definition">
+            <p>A file/library with pre-written functions for common tasks that you can use in your js files. This allows you to do some things fast, with pre-build functions like alert() without having to write all the code to make them happen.</p>
+            <a href="https://www.w3schools.com/jquery/jquery_intro.asp">More info</a>
+          </div>
         </div>
       </div>
     </div>
