--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.6.0.s"></script>
+  <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
   <title>JS & jQuery Flashcards</title>
 </head>
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card">
-          <h3>JavaScript(JS)</h3>
+          <h3 class="java">JavaScript(JS)</h3>
           <div class="definition">
             <p>An object-oriented programming language often used to make web sites interactive.</p>
             <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">More info</a>
