Add id 'java' to first term.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div class="row">
       <div class="col-md-3">
-        <div class="card">
-          <h3 class="java">JavaScript(JS)</h3>
-          <div class="definition">
+        <div class="card" id="java">
+          <h3>JavaScript(JS)</h3>
+          <div class="definition" id="java">
             <p>An object-oriented programming language often used to make web sites interactive.</p>
             <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">More info</a>
           </div>
