Add ids for operators, variables and function sections.

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card">
+        <div class="card" id="operators">
           <h3>Operators</h3>
-          <div class="definition">
+          <div class="definition" id="operators">
             <p>Characters such as (+) or (!==) that carry out operations such as math on data, or assigning a value to variables. They can also compare values/data to each other.</p>    
             <a href="https://developer.mozilla.org/en-US/docs/Glossary/Operator">More info</a>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card">
+        <div class="card" id="variables">
           <h3>Variables</h3>
-          <div class="definition">
+          <div class="definition" id="variables">
             <p>A name given to a value, known or unknown.</p>
             <a href="https://en.wikipedia.org/wiki/Variable_(computer_science)">More info</a>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card">
+        <div class="card" id="function">
           <h3>Function</h3>
-          <div class="definition">
+          <div class="definition" id="function">
             <p>A <strong>named</strong> set of steps/processes that produces a result/output from performing said processes on an inputted value (or values).</p>
             <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Functions">More info</a>
           </div>
