Add ids and the functions to show/hide definition for last 4 terms.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
   <title>JS & jQuery Flashcards</title>
 </head>
 <body>
-
   <div class="container">
-
     <div class="jumbotron">
       <h1>JS & jQuery Flashcards</h1>
       <p>Click on a card to see the definition</p>
     </div>
-
     <div class="row">
       <div class="col-md-3">
         <div class="card" id="java">
@@ -54,46 +51,44 @@
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3">
-        <div class="card">
+        <div class="card" id="methods">
           <h3>Methods</h3>
-          <div class="definition">
+          <div class="definition" id="methods">
             <p>A type of JS function that is called on something, such as on a string.</p>
             <a href="https://www.learnhowtoprogram.com/introduction-to-programming-part-time-react-track/javascript-and-jquery/methods">More info</a>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card">
+        <div class="card" id="arguments">
           <h3>Arguments</h3>
-          <div class="definition">
+          <div class="definition" id="arguments">
             <p>The actual value or values you input/give to a function - the data you want the function/method to perform its steps on. Not to be confused with <a href="https://developer.mozilla.org/en-US/docs/Glossary/Parameter">parameters</a>.</p>
             <a href="https://developer.mozilla.org/en-US/docs/Glossary/Argument">More info</a>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card">
+        <div class="card" id="parameters">
           <h3>Parameters</h3>
-          <div class="definition">
+          <div class="definition" id="parameters">
             <p>A named variable that is assigned to an argument that gets passed into a function. Sort of like a temporary/placeholder for the actual value that gets inputted into a function. Related to, but not the same as an <a href="https://developer.mozilla.org/en-US/docs/Glossary/Argument">argument</a>.</p>
             <a href="https://developer.mozilla.org/en-US/docs/Glossary/Parameter">More info</a>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card">
+        <div class="card" id="jquery">
           <h3>jQuery</h3>
-          <div class="definition">
+          <div class="definition" id="jquery">
             <p>A file/library with pre-written functions for common tasks that you can use in your js files. This allows you to do some things fast, with pre-build functions like alert() without having to write all the code to make them happen.</p>
             <a href="https://www.w3schools.com/jquery/jquery_intro.asp">More info</a>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </body>
 </html>
